fix overlapping tab and border box and note styling in brief metadata

--- a/web/themes/custom/asulib_barrio/scss/components/tabs.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/tabs.scss
@@ -25,3 +25,7 @@ nav.tabs ul {
 .nav-tabs .nav-link.active a:visited {
     color: $brand-primary;
 }
+
+.nav-tabs .nav-link {
+    margin: .2em .2em 0 .2em;
+}
